--- a/planes.html
+++ b/planes.html
@@ -11,6 +11,26 @@ body{
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
+  overflow-x:hidden;
+}
+
+/* ===== BACKGROUND ===== */
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  background:
+    radial-gradient(circle at 20% 25%,rgba(0,200,255,.18),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(140,90,255,.22),transparent 40%),
+    #05070c;
+  z-index:-2;
+}
+body::after{
+  content:"";
+  position:fixed;
+  inset:0;
+  backdrop-filter:blur(90px);
+  z-index:-1;
 }
 
 /* ===== HEADER ===== */
@@ -21,35 +41,25 @@ header{
   height:64px;
   display:flex;
   align-items:center;
-  padding:0 16px;
+  padding:0 18px;
   background:rgba(255,255,255,.05);
   backdrop-filter:blur(18px);
   border-bottom:1px solid rgba(255,255,255,.08);
   z-index:1000;
 }
-
-/* MENU LEFT */
-nav{
-  display:flex;
-  gap:18px;
-}
-
+nav{display:flex;gap:20px}
 nav a{
   color:#fff;
   text-decoration:none;
   font-weight:600;
   opacity:.85;
 }
-
 nav a:hover{opacity:1}
-
-/* LANG RIGHT */
 .lang{
   margin-left:auto;
   display:flex;
   gap:8px;
 }
-
 .lang button{
   padding:6px 14px;
   border-radius:14px;
@@ -59,82 +69,133 @@ nav a:hover{opacity:1}
   font-weight:600;
   cursor:pointer;
 }
+.lang button.active{background:#00cfff;color:#000}
 
-.lang button.active{
-  background:#00cfff;
-  color:#000;
-}
-
-/* ===== CONTENT ===== */
+/* ===== MAIN ===== */
 main{
-  margin-top:90px;
-  padding:40px 16px;
+  margin-top:110px;
+  padding:20px 16px 160px;
 }
 
+/* ===== TITLES ===== */
 h1{
   text-align:center;
-  font-size:36px;
-  margin-bottom:10px;
+  font-size:40px;
+  margin-bottom:14px;
 }
-
 .subtitle{
   text-align:center;
-  opacity:.8;
-  margin-bottom:50px;
+  max-width:760px;
+  margin:0 auto 70px;
+  opacity:.75;
+  font-size:18px;
 }
 
-/* PLANS */
+/* ===== PLANS ===== */
 .plans{
-  display:grid;
-  gap:24px;
-  max-width:1000px;
+  max-width:1200px;
   margin:auto;
+  display:grid;
+  gap:34px;
+}
+@media(min-width:900px){
+  .plans{grid-template-columns:repeat(3,1fr)}
 }
 
 .plan{
   background:rgba(255,255,255,.06);
-  border-radius:26px;
-  padding:36px 28px;
-  box-shadow:0 30px 100px rgba(0,0,0,.9);
+  border-radius:30px;
+  padding:34px;
+  backdrop-filter:blur(16px);
+  box-shadow:0 40px 120px rgba(0,0,0,.9);
+  transition:.45s ease;
+  position:relative;
+}
+.plan:hover{
+  transform:translateY(-8px);
+  box-shadow:0 0 40px rgba(0,200,255,.35);
 }
 
-.plan h2{
-  font-size:24px;
-  margin-bottom:10px;
+.plan.featured{
+  border:2px solid #00cfff;
+  box-shadow:0 0 60px rgba(0,200,255,.45);
+  transform:scale(1.04);
 }
 
-.price{
-  font-size:48px;
-  font-weight:800;
-  margin:10px 0;
+.badge{
+  position:absolute;
+  top:-14px;
+  left:50%;
+  transform:translateX(-50%);
+  background:#00cfff;
+  color:#000;
+  padding:6px 18px;
+  border-radius:20px;
+  font-weight:700;
+  font-size:13px;
 }
 
-.plan ul{
-  list-style:none;
-  margin:20px 0;
-}
+.plan h3{font-size:26px;margin-bottom:12px}
+.price{font-size:44px;font-weight:800;margin:18px 0}
+.price span{font-size:16px;opacity:.6}
 
-.plan li{
-  margin-bottom:10px;
+.features{
+  margin-top:22px;
+  display:grid;
+  gap:12px;
   opacity:.9;
 }
 
-.plan button{
+.plan a{
+  margin-top:26px;
+  display:inline-block;
   width:100%;
-  padding:16px;
-  border:none;
-  border-radius:20px;
+  text-align:center;
+  padding:16px 0;
   background:#00cfff;
+  color:#000;
   font-weight:800;
-  font-size:16px;
-  cursor:pointer;
+  border-radius:30px;
+  text-decoration:none;
 }
 
-/* DESKTOP */
-@media(min-width:900px){
-  .plans{
-    grid-template-columns:repeat(3,1fr);
-  }
+/* ===== GUARANTEE ===== */
+.guarantee{
+  max-width:900px;
+  margin:120px auto 0;
+  background:rgba(255,255,255,.06);
+  border-radius:30px;
+  padding:40px;
+  text-align:center;
+}
+.guarantee h2{font-size:30px;margin-bottom:20px}
+.guarantee p{opacity:.85;line-height:1.7}
+
+/* ===== FOOTER ===== */
+footer{
+  margin-top:140px;
+  padding:40px 20px;
+  text-align:center;
+  opacity:.55;
+  font-size:14px;
+}
+
+/* ===== WHATSAPP ===== */
+.whatsapp{
+  position:fixed;
+  bottom:22px;
+  right:22px;
+  width:62px;
+  height:62px;
+  background:#25D366;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:30px;
+  color:#fff;
+  text-decoration:none;
+  z-index:999;
 }
 </style>
 </head>
@@ -148,7 +209,6 @@ h1{
     <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
     <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
   </nav>
-
   <div class="lang">
     <button id="es" class="active">ES</button>
     <button id="en">EN</button>
@@ -156,53 +216,122 @@ h1{
 </header>
 
 <main>
-  <h1 data-es="Planes y precios" data-en="Plans & Pricing">Planes y precios</h1>
+  <h1 data-es="Planes claros. Resultados reales."
+      data-en="Clear plans. Real results.">
+      Planes claros. Resultados reales.
+  </h1>
+
   <p class="subtitle"
-     data-es="Pagas una sola vez. La web es 100% tuya."
-     data-en="One-time payment. The website is 100% yours.">
-     Pagas una sola vez. La web es 100% tuya.
+     data-es="Pagos únicos. Diseño profesional. Sin mensualidades."
+     data-en="One-time payments. Professional design. No monthly fees.">
+     Pagos únicos. Diseño profesional. Sin mensualidades.
   </p>
 
   <div class="plans">
+
     <div class="plan">
-      <h2>Plan Z</h2>
-      <div class="price">$190</div>
-      <ul>
-        <li>✔ Landing profesional</li>
-        <li>✔ Optimizada para móvil</li>
-        <li>✔ Botón de contacto</li>
-      </ul>
-      <button onclick="contact('Plan Z - $190')">Contactar</button>
+      <h3>Z</h3>
+      <div class="price">$190 <span>USD</span></div>
+      <div class="features">
+        <div>✔ Web profesional básica</div>
+        <div>✔ Diseño responsive</div>
+        <div>✔ Secciones esenciales</div>
+      </div>
+      <a href="https://wa.me/15027942412?text=Hola%20quiero%20el%20plan%20Z%20($190)">
+        <span data-es="Elegir plan" data-en="Choose plan">Elegir plan</span>
+      </a>
+    </div>
+
+    <div class="plan featured">
+      <div class="badge" data-es="Recomendado" data-en="Recommended">Recomendado</div>
+      <h3>Z+</h3>
+      <div class="price">$380 <span>USD</span></div>
+      <div class="features">
+        <div>✔ Diseño premium</div>
+        <div>✔ Animaciones tipo app</div>
+        <div>✔ Optimizada para convertir</div>
+      </div>
+      <a href="https://wa.me/15027942412?text=Hola%20quiero%20el%20plan%20Z+%20($380)">
+        <span data-es="Elegir plan" data-en="Choose plan">Elegir plan</span>
+      </a>
     </div>
 
     <div class="plan">
-      <h2>Plan Z+</h2>
-      <div class="price">$380</div>
-      <ul>
-        <li>✔ Web multi-sección</li>
-        <li>✔ Diseño premium</li>
-        <li>✔ SEO base</li>
-      </ul>
-      <button onclick="contact('Plan Z+ - $380')">Contactar</button>
+      <h3>Z Premium</h3>
+      <div class="price">$620 <span>USD</span></div>
+      <div class="features">
+        <div>✔ Diseño exclusivo</div>
+        <div>✔ Experiencia tipo sistema</div>
+        <div>✔ Soporte prioritario</div>
+      </div>
+      <a href="https://wa.me/15027942412?text=Hola%20quiero%20el%20plan%20Z%20Premium%20($620)">
+        <span data-es="Elegir plan" data-en="Choose plan">Elegir plan</span>
+      </a>
     </div>
 
-    <div class="plan">
-      <h2>Z Premium</h2>
-      <div class="price">$620</div>
-      <ul>
-        <li>✔ Diseño tipo app</li>
-        <li>✔ Efectos avanzados</li>
-        <li>✔ Soporte prioritario</li>
-      </ul>
-      <button onclick="contact('Z Premium - $620')">Contactar</button>
-    </div>
+  </div>
+
+  <div class="guarantee">
+    <h2 data-es="Nuestra garantía" data-en="Our guarantee">Nuestra garantía</h2>
+    <p data-es="Tu web es 100% tuya. Sin pagos mensuales. Ajustamos hasta que quedes conforme."
+       data-en="Your website is 100% yours. No monthly fees. We adjust until you're satisfied.">
+       Tu web es 100% tuya. Sin pagos mensuales. Ajustamos hasta que quedes conforme.
+    </p>
   </div>
 </main>
 
+<footer>
+  © 2025 ZenSite · Webs profesionales · Pagos únicos
+</footer>
+
+<a class="whatsapp" href="https://wa.me/15027942412">💬</a>
+
+<!-- CTA INTELIGENTE -->
+<div id="smartCta" style="
+position:fixed;
+bottom:100px;
+right:24px;
+max-width:280px;
+background:rgba(20,20,28,.95);
+backdrop-filter:blur(18px);
+border:1px solid rgba(255,255,255,.15);
+border-radius:22px;
+padding:18px;
+box-shadow:0 30px 80px rgba(0,0,0,.8);
+display:none;
+z-index:9999;
+">
+  <div style="font-weight:700;margin-bottom:6px">
+    ¿Listo para una web seria?
+  </div>
+  <div style="font-size:14px;opacity:.8;margin-bottom:14px">
+    Te ayudo a elegir el plan ideal.
+  </div>
+  <a href="https://wa.me/15027942412?text=Hola%20estoy%20viendo%20los%20planes%20y%20quiero%20ayuda"
+     style="
+     display:block;
+     text-align:center;
+     padding:12px;
+     background:#00cfff;
+     color:#000;
+     font-weight:800;
+     border-radius:18px;
+     text-decoration:none;">
+     Hablar ahora
+  </a>
+  <div onclick="closeCta()" style="
+  position:absolute;
+  top:8px;
+  right:12px;
+  font-size:18px;
+  cursor:pointer;
+  opacity:.6;">×</div>
+</div>
+
 <script>
+const texts=document.querySelectorAll("[data-es]");
 const esBtn=document.getElementById("es");
 const enBtn=document.getElementById("en");
-const texts=document.querySelectorAll("[data-es]");
 
 function setLang(lang){
   texts.forEach(el=>el.textContent=el.dataset[lang]);
@@ -210,17 +339,21 @@ function setLang(lang){
   enBtn.classList.toggle("active",lang==="en");
   localStorage.setItem("lang",lang);
 }
-
 esBtn.onclick=()=>setLang("es");
 enBtn.onclick=()=>setLang("en");
 setLang(localStorage.getItem("lang")||"es");
 
-function contact(plan){
-  window.open(
-    `https://wa.me/15027942412?text=Hola,%20quiero%20el%20${encodeURIComponent(plan)}`,
-    "_blank"
-  );
+/* CTA inteligente */
+const cta=document.getElementById("smartCta");
+function showCta(){
+  if(!localStorage.getItem("ctaSeen")){
+    cta.style.display="block";
+    localStorage.setItem("ctaSeen","yes");
+  }
 }
+function closeCta(){cta.style.display="none";}
+setTimeout(showCta,6000);
+window.addEventListener("scroll",()=>{if(window.scrollY>350)showCta();});
 </script>
 
 </body>
