--- a/nosotros.html
+++ b/nosotros.html
@@ -14,14 +14,14 @@ body{
   overflow-x:hidden;
 }
 
-/* BACKGROUND */
+/* ===== BACKGROUND ===== */
 body::before{
   content:"";
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 15% 20%,rgba(0,200,255,.18),transparent 45%),
-    radial-gradient(circle at 85% 80%,rgba(140,90,255,.22),transparent 45%),
+    radial-gradient(circle at 20% 25%,rgba(0,200,255,.18),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(140,90,255,.22),transparent 40%),
     #05070c;
   z-index:-2;
 }
@@ -33,7 +33,7 @@ body::after{
   z-index:-1;
 }
 
-/* HEADER */
+/* ===== HEADER (IGUAL AL RESTO) ===== */
 header{
   position:fixed;
   top:0;
@@ -41,13 +41,13 @@ header{
   height:64px;
   display:flex;
   align-items:center;
-  padding:0 16px;
+  padding:0 18px;
   background:rgba(255,255,255,.05);
   backdrop-filter:blur(18px);
   border-bottom:1px solid rgba(255,255,255,.08);
   z-index:1000;
 }
-nav{display:flex;gap:18px}
+nav{display:flex;gap:20px}
 nav a{
   color:#fff;
   text-decoration:none;
@@ -55,7 +55,6 @@ nav a{
   opacity:.85;
 }
 nav a:hover{opacity:1}
-
 .lang{
   margin-left:auto;
   display:flex;
@@ -70,91 +69,123 @@ nav a:hover{opacity:1}
   font-weight:600;
   cursor:pointer;
 }
-.lang button.active{
-  background:#00cfff;
-  color:#000;
-}
+.lang button.active{background:#00cfff;color:#000}
 
-/* MAIN */
+/* ===== MAIN ===== */
 main{
-  margin-top:100px;
-  padding:40px 16px 140px;
+  margin-top:110px;
+  padding:20px 16px 160px;
+  max-width:1100px;
+  margin-left:auto;
+  margin-right:auto;
 }
 
-/* SECTIONS */
-.section{
-  max-width:1100px;
-  margin:0 auto 100px;
-  text-align:center;
-  opacity:0;
-  transform:translateY(30px);
-  transition:all .9s cubic-bezier(.16,1,.3,1);
-}
-.section.show{
-  opacity:1;
-  transform:translateY(0);
-}
-.section h1{
+/* ===== TITLES ===== */
+h1{
   font-size:42px;
   margin-bottom:18px;
-  text-shadow:0 0 30px rgba(0,200,255,.25);
 }
-.section h2{
-  font-size:30px;
-  margin-bottom:16px;
-}
-.section p{
-  opacity:.85;
+.subtitle{
+  max-width:760px;
+  opacity:.8;
   line-height:1.7;
-  max-width:820px;
-  margin:0 auto;
+  margin-bottom:80px;
 }
 
-/* CARDS */
+/* ===== SECTIONS ===== */
+.section{
+  margin-bottom:120px;
+}
+.section h2{
+  font-size:32px;
+  margin-bottom:20px;
+}
+.section p{
+  max-width:780px;
+  opacity:.85;
+  line-height:1.7;
+}
+
+/* ===== GRID ===== */
 .grid{
   display:grid;
-  gap:26px;
-  margin-top:48px;
+  gap:30px;
+}
+@media(min-width:900px){
+  .grid{grid-template-columns:repeat(3,1fr)}
 }
 .card{
-  background:linear-gradient(180deg,rgba(255,255,255,.08),rgba(255,255,255,.02));
-  border-radius:28px;
+  background:rgba(255,255,255,.06);
   padding:34px;
-  box-shadow:0 40px 120px rgba(0,0,0,.9);
-  border:1px solid rgba(255,255,255,.12);
-  transition:.5s ease;
+  border-radius:28px;
+  backdrop-filter:blur(14px);
+  transition:.45s ease;
 }
 .card:hover{
   transform:translateY(-8px);
-  box-shadow:0 0 40px rgba(0,200,255,.25);
-}
-.card h3{
-  font-size:22px;
-  margin-bottom:10px;
+  box-shadow:0 0 40px rgba(0,200,255,.35);
 }
 
-/* TIMELINE */
-.timeline{
-  max-width:900px;
-  margin:60px auto 0;
-  display:grid;
-  gap:34px;
-}
-.step{
-  padding:28px;
-  border-radius:26px;
+/* ===== GUARANTEE ===== */
+.guarantee{
   background:rgba(255,255,255,.06);
-  border:1px solid rgba(255,255,255,.1);
+  border-radius:32px;
+  padding:50px;
 }
-.step span{
-  color:#00cfff;
-  font-weight:700;
-  letter-spacing:.08em;
+.guarantee h2{
+  font-size:34px;
+  margin-bottom:24px;
+}
+.guarantee ul{
+  list-style:none;
+  display:grid;
+  gap:14px;
+  opacity:.9;
+}
+.guarantee li{
+  display:flex;
+  gap:10px;
 }
 
-/* DESKTOP */
-@media(min-width:900px){
-  .grid{grid-template-columns:repeat(3,1fr)}
+/* ===== CTA ===== */
+.cta{
+  margin-top:80px;
+}
+.cta a{
+  display:inline-block;
+  padding:16px 36px;
+  background:#00cfff;
+  color:#000;
+  font-weight:800;
+  border-radius:30px;
+  text-decoration:none;
+}
+
+/* ===== FOOTER ===== */
+footer{
+  margin-top:140px;
+  padding:40px 20px;
+  text-align:center;
+  opacity:.55;
+  font-size:14px;
+}
+
+/* ===== WHATSAPP ===== */
+.whatsapp{
+  position:fixed;
+  bottom:22px;
+  right:22px;
+  width:62px;
+  height:62px;
+  background:#25D366;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:30px;
+  color:#fff;
+  text-decoration:none;
+  z-index:999;
 }
 </style>
 </head>
@@ -176,82 +207,96 @@ main{
 
 <main>
 
-<section class="section">
-  <h1 data-es="No hacemos páginas. Construimos sistemas."
-      data-en="We don’t build pages. We build systems."></h1>
-  <p data-es="ZenSite crea experiencias digitales sólidas, premium y confiables desde el primer segundo."
-     data-en="ZenSite creates solid, premium and trustworthy digital experiences from the first second."></p>
-</section>
+  <!-- HERO -->
+  <section class="section">
+    <h1 data-es="Somos ZenSite"
+        data-en="We are ZenSite">
+        Somos ZenSite
+    </h1>
 
-<section class="section">
-  <div class="grid">
-    <div class="card">
-      <h3 data-es="Diseño tipo app" data-en="App-like design"></h3>
-      <p data-es="Interfaces fluidas inspiradas en iOS."
-         data-en="Fluid interfaces inspired by iOS."></p>
-    </div>
-    <div class="card">
-      <h3 data-es="Arquitectura estratégica" data-en="Strategic architecture"></h3>
-      <p data-es="Cada sección tiene un propósito claro."
-         data-en="Every section has a clear purpose."></p>
-    </div>
-    <div class="card">
-      <h3 data-es="Percepción premium" data-en="Premium perception"></h3>
-      <p data-es="Nada genérico. Nada improvisado."
-         data-en="Nothing generic. Nothing improvised."></p>
-    </div>
-  </div>
-</section>
+    <p class="subtitle"
+       data-es="Creamos webs con mentalidad de producto, no como simples páginas. Diseñamos experiencias que posicionan marcas y generan confianza real."
+       data-en="We build websites with a product mindset, not as simple pages. We design experiences that position brands and build real trust.">
+       Creamos webs con mentalidad de producto, no como simples páginas. Diseñamos experiencias que posicionan marcas y generan confianza real.
+    </p>
+  </section>
 
-<section class="section">
-  <h2 data-es="Nuestro proceso" data-en="Our process"></h2>
-  <div class="timeline">
-    <div class="step">
-      <span data-es="ANÁLISIS" data-en="ANALYSIS"></span>
-      <p data-es="Estudiamos tu marca y objetivos."
-         data-en="We study your brand and goals."></p>
-    </div>
-    <div class="step">
-      <span data-es="ESTRUCTURA" data-en="STRUCTURE"></span>
-      <p data-es="Creamos una base sólida."
-         data-en="We create a solid foundation."></p>
-    </div>
-    <div class="step">
-      <span data-es="EXPERIENCIA" data-en="EXPERIENCE"></span>
-      <p data-es="Diseño que impone respeto."
-         data-en="Design that commands respect."></p>
-    </div>
-  </div>
-</section>
+  <!-- QUE NOS DIFERENCIA -->
+  <section class="section">
+    <h2 data-es="Qué nos diferencia"
+        data-en="What sets us apart">
+        Qué nos diferencia
+    </h2>
 
-<!-- ===== GARANTÍAS ===== -->
-<section class="section">
-  <h2 data-es="Nuestras garantías" data-en="Our guarantees"></h2>
-  <div class="grid">
-    <div class="card">
-      <h3 data-es="100% tuyo" data-en="100% yours"></h3>
-      <p data-es="La web es completamente tuya. Sin mensualidades."
-         data-en="The website is fully yours. No monthly fees."></p>
+    <div class="grid">
+      <div class="card"
+           data-es="Diseño con intención. Cada decisión tiene un porqué."
+           data-en="Design with intention. Every decision has a purpose.">
+        Diseño con intención. Cada decisión tiene un porqué.
+      </div>
+
+      <div class="card"
+           data-es="Experiencia tipo sistema, no plantillas genéricas."
+           data-en="System-like experience, not generic templates.">
+        Experiencia tipo sistema, no plantillas genéricas.
+      </div>
+
+      <div class="card"
+           data-es="Comunicación directa, clara y sin rodeos."
+           data-en="Direct, clear communication without runarounds.">
+        Comunicación directa, clara y sin rodeos.
+      </div>
     </div>
-    <div class="card">
-      <h3 data-es="Aprobación final" data-en="Final approval"></h3>
-      <p data-es="No se entrega nada sin tu visto bueno."
-         data-en="Nothing is delivered without your approval."></p>
+  </section>
+
+  <!-- PARA QUIEN ES -->
+  <section class="section">
+    <h2 data-es="Para quién es ZenSite"
+        data-en="Who ZenSite is for">
+        Para quién es ZenSite
+    </h2>
+
+    <p data-es="Trabajamos con negocios y marcas que entienden que su web es parte clave de su imagen y crecimiento."
+       data-en="We work with businesses and brands that understand their website is a key part of their image and growth.">
+       Trabajamos con negocios y marcas que entienden que su web es parte clave de su imagen y crecimiento.
+    </p>
+  </section>
+
+  <!-- GARANTIAS -->
+  <section class="section guarantee">
+    <h2 data-es="Nuestras garantías"
+        data-en="Our guarantees">
+        Nuestras garantías
+    </h2>
+
+    <ul>
+      <li>✔ <span data-es="Tu web es 100% tuya" data-en="Your website is 100% yours">Tu web es 100% tuya</span></li>
+      <li>✔ <span data-es="Sin pagos mensuales ocultos" data-en="No hidden monthly fees">Sin pagos mensuales ocultos</span></li>
+      <li>✔ <span data-es="Ajustamos hasta que estés conforme" data-en="We adjust until you're satisfied">Ajustamos hasta que estés conforme</span></li>
+      <li>✔ <span data-es="Soporte real y comunicación directa" data-en="Real support and direct communication">Soporte real y comunicación directa</span></li>
+    </ul>
+
+    <div class="cta">
+      <a href="https://wa.me/15027942412?text=Hola%20quiero%20hablar%20sobre%20una%20web%20con%20ZenSite"
+         data-es="Hablar con nosotros"
+         data-en="Talk with us">
+         Hablar con nosotros
+      </a>
     </div>
-    <div class="card">
-      <h3 data-es="Soporte real" data-en="Real support"></h3>
-      <p data-es="Te acompañamos después de la entrega."
-         data-en="We support you after delivery."></p>
-    </div>
-  </div>
-</section>
+  </section>
 
 </main>
 
+<footer>
+  © 2025 ZenSite · Webs profesionales · Pagos únicos
+</footer>
+
+<a class="whatsapp" href="https://wa.me/15027942412">💬</a>
+
 <script>
+const texts=document.querySelectorAll("[data-es]");
 const esBtn=document.getElementById("es");
 const enBtn=document.getElementById("en");
-const texts=document.querySelectorAll("[data-es]");
 
 function setLang(lang){
   texts.forEach(el=>el.textContent=el.dataset[lang]);
@@ -262,12 +307,6 @@ function setLang(lang){
 esBtn.onclick=()=>setLang("es");
 enBtn.onclick=()=>setLang("en");
 setLang(localStorage.getItem("lang")||"es");
-
-const sections=document.querySelectorAll(".section");
-const obs=new IntersectionObserver(e=>{
-  e.forEach(s=>s.isIntersecting&&s.target.classList.add("show"));
-},{threshold:.2});
-sections.forEach(s=>obs.observe(s));
 </script>
 
 </body>
