--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nosotros | ZenSite</title>
+<title>ZenSite | Home</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -14,14 +14,14 @@ body{
   overflow-x:hidden;
 }
 
-/* ===== BACKGROUND ===== */
+/* BACKGROUND */
 body::before{
   content:"";
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 20% 25%,rgba(0,200,255,.18),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(140,90,255,.22),transparent 40%),
+    radial-gradient(circle at 20% 20%,rgba(0,200,255,.25),transparent 40%),
+    radial-gradient(circle at 80% 80%,rgba(140,90,255,.25),transparent 40%),
     #05070c;
   z-index:-2;
 }
@@ -33,21 +33,24 @@ body::after{
   z-index:-1;
 }
 
-/* ===== HEADER (IGUAL AL RESTO) ===== */
+/* HEADER */
 header{
   position:fixed;
   top:0;
   width:100%;
-  height:64px;
-  display:flex;
-  align-items:center;
-  padding:0 18px;
-  background:rgba(255,255,255,.05);
-  backdrop-filter:blur(18px);
-  border-bottom:1px solid rgba(255,255,255,.08);
   z-index:1000;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:16px 28px;
+  background:rgba(255,255,255,.04);
+  backdrop-filter:blur(16px);
+  border-bottom:1px solid rgba(255,255,255,.08);
 }
-nav{display:flex;gap:20px}
+nav{
+  display:flex;
+  gap:22px;
+}
 nav a{
   color:#fff;
   text-decoration:none;
@@ -55,128 +58,69 @@ nav a{
   opacity:.85;
 }
 nav a:hover{opacity:1}
+
+/* LANG */
 .lang{
-  margin-left:auto;
-  display:flex;
-  gap:8px;
-}
-.lang button{
-  padding:6px 14px;
-  border-radius:14px;
-  background:rgba(255,255,255,.1);
-  border:1px solid rgba(255,255,255,.25);
-  color:#fff;
-  font-weight:600;
-  cursor:pointer;
-}
-.lang button.active{background:#00cfff;color:#000}
-
-/* ===== MAIN ===== */
-main{
-  margin-top:110px;
-  padding:20px 16px 160px;
-  max-width:1100px;
-  margin-left:auto;
-  margin-right:auto;
-}
-
-/* ===== TITLES ===== */
-h1{
-  font-size:42px;
-  margin-bottom:18px;
-}
-.subtitle{
-  max-width:760px;
-  opacity:.8;
-  line-height:1.7;
-  margin-bottom:80px;
-}
-
-/* ===== SECTIONS ===== */
-.section{
-  margin-bottom:120px;
-}
-.section h2{
-  font-size:32px;
-  margin-bottom:20px;
-}
-.section p{
-  max-width:780px;
-  opacity:.85;
-  line-height:1.7;
-}
-
-/* ===== GRID ===== */
-.grid{
-  display:grid;
-  gap:30px;
-}
-@media(min-width:900px){
-  .grid{grid-template-columns:repeat(3,1fr)}
-}
-.card{
-  background:rgba(255,255,255,.06);
-  padding:34px;
-  border-radius:28px;
-  backdrop-filter:blur(14px);
-  transition:.45s ease;
-}
-.card:hover{
-  transform:translateY(-8px);
-  box-shadow:0 0 40px rgba(0,200,255,.35);
-}
-
-/* ===== GUARANTEE ===== */
-.guarantee{
-  background:rgba(255,255,255,.06);
-  border-radius:32px;
-  padding:50px;
-}
-.guarantee h2{
-  font-size:34px;
-  margin-bottom:24px;
-}
-.guarantee ul{
-  list-style:none;
-  display:grid;
-  gap:14px;
-  opacity:.9;
-}
-.guarantee li{
   display:flex;
   gap:10px;
 }
-
-/* ===== CTA ===== */
-.cta{
-  margin-top:80px;
+.lang button{
+  background:none;
+  border:none;
+  color:#fff;
+  font-weight:700;
+  opacity:.7;
+  cursor:pointer;
 }
-.cta a{
-  display:inline-block;
-  padding:16px 36px;
-  background:#00cfff;
-  color:#000;
-  font-weight:800;
-  border-radius:30px;
-  text-decoration:none;
-}
+.lang button.active{opacity:1}
 
-/* ===== FOOTER ===== */
-footer{
-  margin-top:140px;
-  padding:40px 20px;
+/* HERO */
+main{
+  padding-top:140px;
   text-align:center;
-  opacity:.55;
+}
+h1{
+  font-size:clamp(48px,7vw,86px);
+  margin-bottom:20px;
+}
+.hero-text{
+  max-width:720px;
+  margin:0 auto;
+  font-size:22px;
+  opacity:.9;
+}
+
+/* IMAGE */
+.hero-image{
+  margin:80px auto 0;
+  max-width:900px;
+}
+.hero-image img{
+  width:100%;
+  border-radius:32px;
+  box-shadow:0 60px 160px rgba(0,0,0,.9);
+}
+
+/* OFFER */
+.offer{
+  position:fixed;
+  top:120px;
+  right:20px;
+  background:rgba(0,200,255,.15);
+  border:1px solid rgba(0,200,255,.4);
+  backdrop-filter:blur(12px);
+  padding:12px 16px;
+  border-radius:16px;
   font-size:14px;
 }
 
-/* ===== WHATSAPP ===== */
+/* WHATSAPP */
 .whatsapp{
   position:fixed;
   bottom:22px;
   right:22px;
-  width:62px;
-  height:62px;
+  width:60px;
+  height:60px;
   background:#25D366;
   border-radius:50%;
   display:flex;
@@ -185,7 +129,6 @@ footer{
   font-size:30px;
   color:#fff;
   text-decoration:none;
-  z-index:999;
 }
 </style>
 </head>
@@ -200,113 +143,36 @@ footer{
     <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
   </nav>
   <div class="lang">
-    <button id="es" class="active">ES</button>
-    <button id="en">EN</button>
+    <button onclick="setLang('es')" class="active">ES</button>
+    <button onclick="setLang('en')">EN</button>
   </div>
 </header>
 
+<div class="offer">🎁 15% OFF — Diciembre</div>
+
 <main>
+  <h1 data-es="ZenSite" data-en="ZenSite">ZenSite</h1>
+  <p class="hero-text"
+     data-es="Diseñamos experiencias web profesionales enfocadas en generar confianza y convertir visitas en clientes reales."
+     data-en="We design professional web experiences focused on trust and real conversions.">
+     Diseñamos experiencias web profesionales enfocadas en generar confianza y convertir visitas en clientes reales.
+  </p>
 
-  <!-- HERO -->
-  <section class="section">
-    <h1 data-es="Somos ZenSite"
-        data-en="We are ZenSite">
-        Somos ZenSite
-    </h1>
-
-    <p class="subtitle"
-       data-es="Creamos webs con mentalidad de producto, no como simples páginas. Diseñamos experiencias que posicionan marcas y generan confianza real."
-       data-en="We build websites with a product mindset, not as simple pages. We design experiences that position brands and build real trust.">
-       Creamos webs con mentalidad de producto, no como simples páginas. Diseñamos experiencias que posicionan marcas y generan confianza real.
-    </p>
-  </section>
-
-  <!-- QUE NOS DIFERENCIA -->
-  <section class="section">
-    <h2 data-es="Qué nos diferencia"
-        data-en="What sets us apart">
-        Qué nos diferencia
-    </h2>
-
-    <div class="grid">
-      <div class="card"
-           data-es="Diseño con intención. Cada decisión tiene un porqué."
-           data-en="Design with intention. Every decision has a purpose.">
-        Diseño con intención. Cada decisión tiene un porqué.
-      </div>
-
-      <div class="card"
-           data-es="Experiencia tipo sistema, no plantillas genéricas."
-           data-en="System-like experience, not generic templates.">
-        Experiencia tipo sistema, no plantillas genéricas.
-      </div>
-
-      <div class="card"
-           data-es="Comunicación directa, clara y sin rodeos."
-           data-en="Direct, clear communication without runarounds.">
-        Comunicación directa, clara y sin rodeos.
-      </div>
-    </div>
-  </section>
-
-  <!-- PARA QUIEN ES -->
-  <section class="section">
-    <h2 data-es="Para quién es ZenSite"
-        data-en="Who ZenSite is for">
-        Para quién es ZenSite
-    </h2>
-
-    <p data-es="Trabajamos con negocios y marcas que entienden que su web es parte clave de su imagen y crecimiento."
-       data-en="We work with businesses and brands that understand their website is a key part of their image and growth.">
-       Trabajamos con negocios y marcas que entienden que su web es parte clave de su imagen y crecimiento.
-    </p>
-  </section>
-
-  <!-- GARANTIAS -->
-  <section class="section guarantee">
-    <h2 data-es="Nuestras garantías"
-        data-en="Our guarantees">
-        Nuestras garantías
-    </h2>
-
-    <ul>
-      <li>✔ <span data-es="Tu web es 100% tuya" data-en="Your website is 100% yours">Tu web es 100% tuya</span></li>
-      <li>✔ <span data-es="Sin pagos mensuales ocultos" data-en="No hidden monthly fees">Sin pagos mensuales ocultos</span></li>
-      <li>✔ <span data-es="Ajustamos hasta que estés conforme" data-en="We adjust until you're satisfied">Ajustamos hasta que estés conforme</span></li>
-      <li>✔ <span data-es="Soporte real y comunicación directa" data-en="Real support and direct communication">Soporte real y comunicación directa</span></li>
-    </ul>
-
-    <div class="cta">
-      <a href="https://wa.me/15027942412?text=Hola%20quiero%20hablar%20sobre%20una%20web%20con%20ZenSite"
-         data-es="Hablar con nosotros"
-         data-en="Talk with us">
-         Hablar con nosotros
-      </a>
-    </div>
-  </section>
-
+  <div class="hero-image">
+    <img src="laptop.png" alt="ZenSite Preview">
+  </div>
 </main>
-
-<footer>
-  © 2025 ZenSite · Webs profesionales · Pagos únicos
-</footer>
 
 <a class="whatsapp" href="https://wa.me/15027942412">💬</a>
 
 <script>
-const texts=document.querySelectorAll("[data-es]");
-const esBtn=document.getElementById("es");
-const enBtn=document.getElementById("en");
-
-function setLang(lang){
-  texts.forEach(el=>el.textContent=el.dataset[lang]);
-  esBtn.classList.toggle("active",lang==="es");
-  enBtn.classList.toggle("active",lang==="en");
-  localStorage.setItem("lang",lang);
+function setLang(l){
+  document.querySelectorAll("[data-es]").forEach(el=>{
+    el.innerText = el.dataset[l];
+  });
+  document.querySelectorAll(".lang button").forEach(b=>b.classList.remove("active"));
+  document.querySelector(.lang button[onclick="setLang('${l}')"]).classList.add("active");
 }
-esBtn.onclick=()=>setLang("es");
-enBtn.onclick=()=>setLang("en");
-setLang(localStorage.getItem("lang")||"es");
 </script>
 
 </body>
