--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Home</title>
+<title>ZenSite</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
+
 body{
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
   background:#05070c;
@@ -14,14 +15,14 @@ body{
   overflow-x:hidden;
 }
 
-/* BACKGROUND */
+/* ===== BACKGROUND ===== */
 body::before{
   content:"";
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 20% 20%,rgba(0,200,255,.25),transparent 40%),
-    radial-gradient(circle at 80% 80%,rgba(140,90,255,.25),transparent 40%),
+    radial-gradient(circle at 20% 20%,rgba(0,200,255,.15),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(120,90,255,.18),transparent 45%),
     #05070c;
   z-index:-2;
 }
@@ -33,94 +34,111 @@ body::after{
   z-index:-1;
 }
 
-/* HEADER */
+/* ===== HEADER ===== */
 header{
   position:fixed;
   top:0;
   width:100%;
   z-index:1000;
   display:flex;
-  justify-content:space-between;
   align-items:center;
-  padding:16px 28px;
+  justify-content:space-between;
+  padding:16px 24px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
 }
-nav{
+
+.nav-left{
   display:flex;
   gap:22px;
 }
-nav a{
+
+.nav-left a{
   color:#fff;
   text-decoration:none;
   font-weight:600;
   opacity:.85;
 }
-nav a:hover{opacity:1}
 
-/* LANG */
 .lang{
   display:flex;
   gap:10px;
 }
+
 .lang button{
-  background:none;
-  border:none;
+  padding:6px 14px;
+  border-radius:20px;
+  border:1px solid rgba(255,255,255,.25);
+  background:transparent;
   color:#fff;
-  font-weight:700;
-  opacity:.7;
+  font-weight:600;
   cursor:pointer;
 }
-.lang button.active{opacity:1}
+.lang .active{
+  background:#00cfff;
+  color:#000;
+  border-color:#00cfff;
+}
 
-/* HERO */
+/* ===== HERO ===== */
 main{
-  padding-top:140px;
+  margin-top:110px;
+  padding:40px 20px 80px;
+  max-width:1100px;
+  margin-inline:auto;
   text-align:center;
 }
+
 h1{
-  font-size:clamp(48px,7vw,86px);
+  font-size:clamp(38px,6vw,68px);
   margin-bottom:20px;
+  letter-spacing:-1px;
 }
-.hero-text{
-  max-width:720px;
-  margin:0 auto;
-  font-size:22px;
+
+p{
+  font-size:clamp(17px,2.5vw,20px);
+  line-height:1.6;
   opacity:.9;
+  max-width:800px;
+  margin:0 auto 40px;
 }
 
-/* IMAGE */
-.hero-image{
-  margin:80px auto 0;
-  max-width:900px;
-}
-.hero-image img{
-  width:100%;
-  border-radius:32px;
-  box-shadow:0 60px 160px rgba(0,0,0,.9);
-}
-
-/* OFFER */
-.offer{
-  position:fixed;
-  top:120px;
-  right:20px;
+/* ===== PROMO ===== */
+.promo{
+  display:inline-flex;
+  align-items:center;
+  gap:10px;
+  padding:10px 18px;
+  border-radius:30px;
   background:rgba(0,200,255,.15);
-  border:1px solid rgba(0,200,255,.4);
-  backdrop-filter:blur(12px);
-  padding:12px 16px;
-  border-radius:16px;
-  font-size:14px;
+  border:1px solid rgba(0,200,255,.35);
+  margin-bottom:30px;
+  font-weight:600;
 }
 
-/* WHATSAPP */
+/* ===== PREVIEW ===== */
+.preview{
+  margin-top:50px;
+  border-radius:28px;
+  background:rgba(255,255,255,.05);
+  padding:20px;
+  box-shadow:0 40px 120px rgba(0,0,0,.9);
+}
+
+.preview img{
+  width:100%;
+  border-radius:20px;
+  display:block;
+}
+
+/* ===== WHATSAPP ===== */
 .whatsapp{
   position:fixed;
   bottom:22px;
   right:22px;
-  width:60px;
-  height:60px;
+  width:62px;
+  height:62px;
   background:#25D366;
   border-radius:50%;
   display:flex;
@@ -129,6 +147,7 @@ h1{
   font-size:30px;
   color:#fff;
   text-decoration:none;
+  z-index:999;
 }
 </style>
 </head>
@@ -136,44 +155,40 @@ h1{
 <body>
 
 <header>
-  <nav>
-    <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
-    <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
-    <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
-    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
-  </nav>
+  <div class="nav-left">
+    <a href="index.html">Inicio</a>
+    <a href="demo.html">Demos</a>
+    <a href="planes.html">Planes</a>
+    <a href="nosotros.html">Nosotros</a>
+  </div>
+
   <div class="lang">
-    <button onclick="setLang('es')" class="active">ES</button>
-    <button onclick="setLang('en')">EN</button>
+    <button class="active">ES</button>
+    <button>EN</button>
   </div>
 </header>
 
-<div class="offer">🎁 15% OFF — Diciembre</div>
-
 <main>
-  <h1 data-es="ZenSite" data-en="ZenSite">ZenSite</h1>
-  <p class="hero-text"
-     data-es="Diseñamos experiencias web profesionales enfocadas en generar confianza y convertir visitas en clientes reales."
-     data-en="We design professional web experiences focused on trust and real conversions.">
-     Diseñamos experiencias web profesionales enfocadas en generar confianza y convertir visitas en clientes reales.
+
+  <div class="promo">
+    🎁 <span>15% OFF — Diciembre</span>
+  </div>
+
+  <h1>ZenSite</h1>
+
+  <p>
+    Diseñamos experiencias web profesionales enfocadas en generar confianza,
+    posicionar tu marca y convertir visitas en clientes reales.
   </p>
 
-  <div class="hero-image">
-    <img src="laptop.png" alt="ZenSite Preview">
+  <div class="preview">
+    <!-- ESTA IMAGEN EXISTE EN TU REPO -->
+    <img src="background.jpg" alt="ZenSite preview">
   </div>
+
 </main>
 
-<a class="whatsapp" href="https://wa.me/15027942412">💬</a>
-
-<script>
-function setLang(l){
-  document.querySelectorAll("[data-es]").forEach(el=>{
-    el.innerText = el.dataset[l];
-  });
-  document.querySelectorAll(".lang button").forEach(b=>b.classList.remove("active"));
-  document.querySelector(.lang button[onclick="setLang('${l}')"]).classList.add("active");
-}
-</script>
+<a class="whatsapp" href="https://wa.me/15027942412" target="_blank">💬</a>
 
 </body>
 </html>
