--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ header{
 /* MAIN */
 main{
   margin-top:110px;
-  padding:40px 20px 80px;
+  padding:40px 20px 100px;
   max-width:1100px;
   margin-inline:auto;
   text-align:center;
@@ -98,25 +98,38 @@ p{
   line-height:1.6;
   opacity:.9;
   max-width:820px;
-  margin:0 auto 40px;
+  margin:0 auto 30px;
 }
 
-/* PROMO */
-.promo{
-  display:inline-flex;
-  align-items:center;
-  gap:10px;
-  padding:10px 18px;
-  border-radius:30px;
-  background:rgba(0,200,255,.15);
+/* FLOATING OFFER */
+.offer{
+  position:absolute;
+  top:55%;
+  left:50%;
+  transform:translate(-50%, -50%);
+  margin-left:220px;
+  padding:10px 16px;
+  border-radius:20px;
+  background:rgba(0,200,255,.18);
   border:1px solid rgba(0,200,255,.35);
-  margin-bottom:28px;
   font-weight:600;
+  font-size:14px;
+  display:flex;
+  align-items:center;
+  gap:8px;
+  backdrop-filter:blur(12px);
+  animation:float 4s ease-in-out infinite;
+}
+
+@keyframes float{
+  0%{transform:translate(-50%, -50%) translateY(0)}
+  50%{transform:translate(-50%, -50%) translateY(-8px)}
+  100%{transform:translate(-50%, -50%) translateY(0)}
 }
 
 /* PREVIEW */
 .preview{
-  margin-top:40px;
+  margin-top:60px;
   border-radius:28px;
   background:rgba(255,255,255,.05);
   padding:20px;
@@ -128,7 +141,7 @@ p{
   display:block;
 }
 
-/* EXTRA TEXT */
+/* EXTRA */
 .extra{
   margin-top:40px;
   font-size:16px;
@@ -173,16 +186,17 @@ p{
 
 <main>
 
-  <div class="promo" id="promo">
-    🎁 15% OFF — Diciembre
-  </div>
-
   <h1 id="title">ZenSite</h1>
 
   <p id="desc">
     Diseñamos experiencias web profesionales enfocadas en generar confianza,
     posicionar tu marca y convertir visitas en clientes reales.
   </p>
+
+  <!-- OFFER FLOAT -->
+  <div class="offer" id="offer">
+    🎁 15% OFF · Diciembre
+  </div>
 
   <div class="preview">
     <img src="background.jpg" alt="ZenSite preview">
@@ -199,36 +213,20 @@ p{
 <script>
 const esBtn = document.getElementById("esBtn");
 const enBtn = document.getElementById("enBtn");
-
-const title = document.getElementById("title");
-const desc = document.getElementById("desc");
-const promo = document.getElementById("promo");
-const extra = document.getElementById("extra");
+const offer = document.getElementById("offer");
 
 enBtn.onclick = () => {
   esBtn.classList.remove("active");
   enBtn.classList.add("active");
-
-  document.querySelectorAll("[data-en]").forEach(el=>{
-    el.textContent = el.dataset.en;
-  });
-
-  promo.textContent = "🎁 15% OFF — December";
-  desc.textContent = "We design professional web experiences focused on building trust, positioning your brand, and converting visits into real clients.";
-  extra.textContent = "Custom-built websites. No generic templates. No shortcuts.";
+  document.querySelectorAll("[data-en]").forEach(el=>el.textContent=el.dataset.en);
+  offer.textContent="🎁 15% OFF · December";
 };
 
 esBtn.onclick = () => {
   enBtn.classList.remove("active");
   esBtn.classList.add("active");
-
-  document.querySelectorAll("[data-es]").forEach(el=>{
-    el.textContent = el.dataset.es;
-  });
-
-  promo.textContent = "🎁 15% OFF — Diciembre";
-  desc.textContent = "Diseñamos experiencias web profesionales enfocadas en generar confianza, posicionar tu marca y convertir visitas en clientes reales.";
-  extra.textContent = "Webs creadas a medida, sin plantillas genéricas ni soluciones rápidas.";
+  document.querySelectorAll("[data-es]").forEach(el=>el.textContent=el.dataset.es);
+  offer.textContent="🎁 15% OFF · Diciembre";
 };
 </script>
 
